--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wordle</title>
+    <title>7 Days of code - Wordle</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <header id="header-container">
+      <img src="images/Logo.svg" alt="wordle logo">
+    </header>
   </body>
 </html>
