add id header-img in tag img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="header-container">
-      <img src="images/Logo.svg" alt="wordle logo">
+      <img id="header-img" src="images/Logo.svg" alt="wordle logo">
     </header>
   </body>
 </html>
